--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biglietto del Treno</title>
     <link rel="stylesheet" href="styles/main.css">
-
 </head>
+
 <body>
 
+    <div id="output">Prezzo di Biglietto</div>
+
     <script src="scripts/script.js"></script>
-    
+
 </body>
 </html>
